fix: Fix snippet wrap on Safari

--- a/src/_assets/scss/_code.scss
+++ b/src/_assets/scss/_code.scss
@@ -13,6 +13,8 @@
     position: relative;
 
     overflow-x: auto;
+    white-space: pre;
+    word-break: keep-all;
 
     margin-left: -1rem;
     margin-right: -1rem;
